Fix Active Color on Settings List
Force transparent on background color for fix overlapped

--- a/apps/settings/style/lists.css
+++ b/apps/settings/style/lists.css
@@ -46,6 +46,7 @@ ul li > label {
   margin: -1rem -1.5rem;
   padding: 1rem 1.5rem;
   flex-direction: column;
+  background-color: transparent;
 }
 
 ul li.menu-item > label,
